# pdf-splitter-dioxus

./: .gitignore  Cargo.toml  LICENSE
assets/: style.css
docs/: pdf-splitter-spec.md
src/: app.rs  lib.rs  main.rs
src/application/: app_state.rs  image_service.rs  mod.rs  split_service.rs
src/components/: chunk_preview.rs  config_panel.rs  error_display.rs  file_drop_zone.rs  mod.rs  result_list.rs  split_progress.rs
src/domain/: commands.rs  errors.rs  mod.rs  models.rs  naming.rs  ports.rs  split_logic.rs
src/infrastructure/: command_executor.rs  file_system.rs  mod.rs  pdf_reader.rs  pdf_writer.rs
src/screens/: done.rs  file_loaded.rs  image_processing.rs  image_setup.rs  mod.rs  splitting.rs  welcome.rs
tests/: integration.rs  unit.rs
tests/integration/: app_state_test.rs  helpers.rs  pdf_io_test.rs  split_service_test.rs
tests/unit/: models_test.rs  naming_test.rs  proptest_split_logic.rs  split_logic_test.rs
